image view for ibytes is set and size were also set

--- a/Ispect/app/src/main/res/layout/activity_login.xml
+++ b/Ispect/app/src/main/res/layout/activity_login.xml
@@ -95,5 +95,24 @@
             android:padding="16dp"
             android:layout_marginBottom="50dp"
             android:letterSpacing="0.2"/>
-
-    </RelativeLayout>
+            <TextView
+            android:id="@+id/signupBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Create Account ? Signup"
+            android:textColor="#d9e5f3"
+            android:letterSpacing="0.1"/>/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginBottom="400dp">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ibytes"
+            />
+    </LinearLayout>
+ </RelativeLayout>
