radio button on selection houskeeping role

--- a/Ispect/app/src/main/res/layout/activity_registration.xml
+++ b/Ispect/app/src/main/res/layout/activity_registration.xml
@@ -65,4 +65,32 @@
                     android:textSize="16dp"
                     android:textColor="#fff"/>
             </LinearLayout>
-                
+                 <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal"
+                android:padding="16dp">
+
+                <RadioGroup
+                    android:id="@+id/radioGroup"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content" >
+
+                    <RadioButton
+                        android:id="@+id/HK"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="#fff"
+                        android:text="Housekeeper"
+                        android:onClick="RadioButtonClicked"/>
+
+                    <RadioButton
+                        android:id="@+id/HKS"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:textColor="#fff"
+                        android:text="Housekeeper Inspector"
+                        android:onClick="RadioButtonClicked"/>
+                </RadioGroup>
