--- a/Ispect/app/src/main/res/layout/activity_registration.xml
+++ b/Ispect/app/src/main/res/layout/activity_registration.xml
@@ -94,3 +94,54 @@
                         android:text="Housekeeper Inspector"
                         android:onClick="RadioButtonClicked"/>
                 </RadioGroup>
+                </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:background="#4a5a71"></LinearLayout>
+        </LinearLayout>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingLeft="60dp"
+        android:paddingRight="60dp"
+        android:orientation="vertical"
+        android:gravity="bottom"
+        android:layout_marginBottom="20dp">
+        <TextView
+            android:id="@+id/createUserBtn"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="#009a9a"
+            android:text="Create"
+            android:textColor="#d9e5f3"
+            android:textStyle="bold"
+            android:gravity="center"
+            android:layout_gravity="bottom"
+            android:padding="16dp"
+            android:layout_marginBottom="50dp"
+            android:letterSpacing="0.2"/>
+        <TextView
+            android:id="@+id/moveToLogin"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            android:text="Already have an account? Login!"
+            android:textColor="#d9e5f3"
+            android:letterSpacing="0.1"/>
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center"
+        android:layout_marginBottom="400dp">
+        <ImageView
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:src="@drawable/ibytes"
+            />
+    </LinearLayout>
+</RelativeLayout>
