--- a/Ispect/app/src/main/res/layout/activity_home.xml
+++ b/Ispect/app/src/main/res/layout/activity_home.xml
@@ -42,6 +42,49 @@
             android:layout_alignParentTop="true"
             android:layout_alignParentLeft="true"
             android:layout_alignParentStart="true">
+
+
+            <TextView
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginBottom="150dp"
+                android:gravity="center"
+                android:paddingTop="10dp"
+                android:text="Ispector Beta"
+                android:textAppearance="@style/TextAppearance.AppCompat.Display1"
+                android:textColor="#FFF" />
+        </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="center"
+            android:layout_marginBottom="200dp"
+            android:weightSum="1">
+
+            <ImageView
+                android:id="@+id/imageView"
+                android:layout_width="150dp"
+                android:layout_height="138dp"
+                android:layout_weight="0.16"
+                android:src="@drawable/ibytes" />
+        </LinearLayout>
+
+
+    </RelativeLayout>
+
+    <android.support.design.widget.NavigationView
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        app:menu="@menu/navigation_menu"
+        app:headerLayout="@layout/navigation_header"
+        android:layout_gravity="start"
+        android:id="@+id/nav_menu"
+        >
+
+
+    </android.support.design.widget.NavigationView>
     
 
 </android.support.v4.widget.DrawerLayout>
